package animal.airanimal;

import animal.Animal;

/**
 * Created by asus on 25-Mar-17.
 */
public class AirAnimal extends Animal {
    public AirAnimal() {
        super();
        type[1] = 1;
    }
}
