package animal.airanimal.accipitridae;

import animal.airanimal.AirAnimal;

/**.
 * Nama         : Zacki Zulfikar Fauzi
 * <br>NIM          : 13515147
 * <br>Nama File    : Accipitridae.java
 * <br>Tanggal      : 27-Mar-17
 */
public class Accipitridae  extends AirAnimal {
    /**.
     * Konstruktor Accipitridae
     */
    public Accipitridae() {
        super();
        famili = "Accipitridae";
    }
}