package animal.airanimal.accipitridae;

import animal.airanimal.accipitridae.Accipitridae;

/**
 * Nama         : Zacki Zulfikar Fauzi
 * <br>NIM          : 13515147
 * <br>Nama File    : Eagle.java
 * <br>Tanggal      : 27-Mar-17
 */
public class Eagle extends Accipitridae {
  /**
   * Konstruktor Eagle
   */
  public Eagle() {
    super();
    species = "Aquila chrysaetos";
    experience = "screeech!";
    berat = 60;
    animal_char = 'E';
    jenis_makanan = 2;
  }
}

