package animal.airanimal.phasianidae;

/**
 * Nama         : Zacki Zulfikar Fauzi
 * <br>NIM          : 13515147
 * <br>Nama File    : Eagle.java
 * <br>Tanggal      : 27-Mar-17
 */
public class Peacock extends Phasianidae{
  /**
   * Konstruktor Peacock
   */
  public Peacock() {
    super();
    species = "Afropavo congensis";
    experience = "Rainbow Bird";
    berat = 50;
    animal_char = 'M';
    jenis_makanan = 3;
    }
}
