package animal.airanimal.phasianidae;

import animal.airanimal.AirAnimal;

/**
 * Created by asus on 26-Mar-17.
 */
public class Phasianidae extends AirAnimal {
    public Phasianidae() {
        super();
        famili = "Phasianidae";
    }
}
