package animal.amphibi;

import animal.Animal;

/**
 * Created by asus on 27-Mar-17.
 */
public class Amphibi extends Animal {
    public Amphibi() {
        super();
        type[2] = 1;
        type[0] = 1;
    }
}
