package animal.amphibi.cryptobranchidae;

import animal.amphibi.Amphibi;

/**
 * Created by asus on 27-Mar-17.
 */
public class Cryptobranchidae extends Amphibi {
    public Cryptobranchidae(){
        super();
        famili = "Cryptobranchidae";
    }

}
