package animal.amphibi.cryptobranchidae;

/**
 * Nama         : Zacki Zulfikar Fauzi
 * <br>NIM          : 13515147
 * <br>Nama File    : Salamander.java
 * <br>Tanggal      : 27-Mar-17
 */
public class Salamander extends Cryptobranchidae{
    /**
     * Konstruktor Salamander
     */
    public Salamander()
    {
        super();
        species = "Adnrias japonicus";
        experience = "Salamander";
        berat = 300;
        animal_char = 'U';
        jenis_makanan = 2;
    }
}
