package animal.landanimal;

import animal.Animal;

/**
 * Created by asus on 26-Mar-17.
 */
public class LandAnimal extends Animal {
    public LandAnimal() {
        super();
        type[0] = 1;
    }
}
