package animal.landanimal.felidae;

import animal.landanimal.LandAnimal;

/**
 * Created by asus on 26-Mar-17.
 */
public class Felidae extends LandAnimal {
    public Felidae(){
        super();
        famili = "Felidae";
    }
}
