package animal.landanimal.felidae;

/**
 * Nama         : Zacki Zulfikar Fauzi
 * <br>NIM          : 13515147
 * <br>Nama File    : Lion.java
 * <br>Tanggal      : 26-Mar-17
 */
public class Lion extends Felidae{
    /**
     * Konstruktor Lion
     */
    public Lion() {
        super();
        species = "Panthera leo";
        experience = "ROAAARRR!";
        berat = 1800;
        animal_char = 'L';
        jenis_makanan =2;
        setEnemy('A');
    }
}
