package animal.wateranimal;

import animal.Animal;

/**
 * Created by asus on 26-Mar-17.
 */
public class WaterAnimal extends Animal {
    public WaterAnimal() {
        super();
        type[2] = 1;
    }
}
