package animal.wateranimal.cetacea;

import animal.wateranimal.WaterAnimal;

/**
 * Created by asus on 26-Mar-17.
 */
public class Cetacea extends WaterAnimal {
    public Cetacea(){
        super();
        famili = "Cetacea";
    }
}
