package animal.wateranimal.cetacea;

/**
 * Nama         : Zacki Zulfikar Fauzi
 * <br>NIM          : 13515147
 * <br>Nama File    : Whale.java
 * <br>Tanggal      : 26-Mar-17
 */
public class Whale extends Cetacea{
    /**
     * Konstruktor Whale
     */
    public Whale() {
        super();
        species = "Balaenoptera musculus";
        experience = "MASSIVE SEA-CREATURE";
        berat = 1500000;
        animal_char = 'X';
        jenis_makanan = 2;
    }
}
